--- a/debian/control
+++ b/debian/control
@@ -6,6 +6,6 @@ Build-Depends: debhelper (>= 9)
 Standards-Version: 3.7.2
 
 Package: default-settings-profiled
-Architecture: all
+Architecture: any
 Description: Default shell configuration
   This package provides the default shell configuration for Maui/Netrunner.
